# iced_color_picker

./: Cargo.toml  README.md
examples/: demo.rs  rgb.rs  rgba.rs
src/: canvas.rs  color.rs  lib.rs  state.rs  style.rs  widget.rs
src/widget/: canvas.rs
tests/: style.rs
